--- a/WebCycleManager/Views/_ViewImports.cshtml
+++ b/WebCycleManager/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebCycleManager
 @using WebCycleManager.Models
+@using DataAccessEF.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
