--- a/WebCycleManager/Views/Shared/_Layout.cshtml
+++ b/WebCycleManager/Views/Shared/_Layout.cshtml
@@ -31,6 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Landen</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Evenementen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stages" asp-action="Index">Etappes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
