--- a/WebCycleManager/Views/Shared/_Layout.cshtml
+++ b/WebCycleManager/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stages" asp-action="Index">Etappes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" asp-area="" asp-controller="Results" asp-action="Index" asp-route-stageId="1">Uitslagen</a>
+                        </li>
                     </ul>
                 </div>
             </div>
