--- a/WebCycleManager/Views/Shared/_Layout.cshtml
+++ b/WebCycleManager/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stages" asp-action="Index">Etappes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-danger" asp-area="" asp-controller="Results" asp-action="Index" asp-route-stageId="1">Uitslagen</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Configurations" asp-action="Index">Configuraties</a>
                         </li>
                     </ul>
                 </div>
