--- a/WebCycleManager/Views/Results/Index.cshtml
+++ b/WebCycleManager/Views/Results/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@model ResultViewModel
 <h1>@Model.StageName</h1>
-<p>
-    <a asp-route-stageId="@Model.StageId" asp-action="Create">Maak nieuw resultaat</a>
-</p>
  <form method="post">
 <table class="table">
     <thead>
@@ -46,5 +43,5 @@
 </table>
 <input type="hidden" id="stageId" name="stageId" value="@Model.StageId" />
 <input type="hidden" id="configurationId" name="configurationId" value="@Model.ConfigurationId" />
-<input type="submit" asp-route-id="@Model.StageId" value="Opslaan" />
+    <a asp-action="Index" asp-route-id="@Model.StageId">Opslaan</a>
 </form>
