--- a/WebCycleManager/Views/Results/Create.cshtml
+++ b/WebCycleManager/Views/Results/Create.cshtml
@@ -17,8 +17,8 @@
                 <select asp-for="StageId" class ="form-control" asp-items="ViewBag.StageId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="CompetitorId" class="control-label"></label>
-                <select asp-for="CompetitorId" class ="form-control" asp-items="ViewBag.CompetitorId"></select>
+                <label asp-for="CompetitorInEventId" class="control-label"></label>
+                <select asp-for="CompetitorInEventId" class ="form-control" asp-items="ViewBag.CompetitorId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
