--- a/WebCycleManager/Views/Results/Delete.cshtml
+++ b/WebCycleManager/Views/Results/Delete.cshtml
@@ -1,33 +1,29 @@
-﻿@model Domain.Models.Result
+﻿@model ResultItemViewModel
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je zeker dat je de deelnemer uit het resultaat wilt verwijderen?</h3>
 <div>
-    <h4>Result</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Stage)
+            @Html.DisplayNameFor(model => model.CompetitorName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Stage.FinishLocation)
+            @Html.DisplayFor(model => model.CompetitorName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Competitor)
+            @Html.DisplayNameFor(model => model.Position)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Competitor.FirstName)
+            @Html.DisplayFor(model => model.Position)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+    <form asp-action="Delete" asp-route-id="@Model.Id">
+        <input type="submit" value="Verwijder" class="btn btn-danger" /> |
+        <a asp-action="Index" asp-route-stageId="@Model.StageId">Terug naar de lijst</a>
     </form>
 </div>
