--- a/WebCycleManager/Views/Results/Details.cshtml
+++ b/WebCycleManager/Views/Results/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Stage.FinishLocation)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Competitor)
+            @Html.DisplayNameFor(model => model.CompetitorInEvent.Competitor)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Competitor.FirstName)
+            @Html.DisplayFor(model => model.CompetitorInEvent.Competitor.CompetitorName)
         </dd>
     </dl>
 </div>
