--- a/WebCycleManager/Views/Results/Edit.cshtml
+++ b/WebCycleManager/Views/Results/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+@*<h1>Edit</h1>
 
 <h4>Result</h4>
 <hr />
@@ -36,4 +36,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
