--- a/WebCycleManager/Views/Events/Delete.cshtml
+++ b/WebCycleManager/Views/Events/Delete.cshtml
@@ -1,27 +1,23 @@
-﻿@model Domain.Models.Event
-
+﻿@model EventItemViewModel
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Verwijder</h1>
-
 <h3>Weet je zeker dat je dit evenement wilt verwijderen?</h3>
 <div>
-    <h4>Event</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventYear)
+            @Html.DisplayNameFor(model => model.Year)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventYear)
+            @Html.DisplayFor(model => model.Year)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
@@ -38,7 +34,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="EventId" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Verwijder" class="btn btn-danger" /> |
         <a asp-action="Index">Terug naar de lijst</a>
     </form>
