--- a/WebCycleManager/Views/Events/Edit.cshtml
+++ b/WebCycleManager/Views/Events/Edit.cshtml
@@ -1,27 +1,25 @@
-﻿@model Domain.Models.Event
+﻿@model EventItemViewModel
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Bewerk</h1>
-
-<h4>Evenement</h4>
+<h4>@Model.EventNameDescription</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="EventId" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="EventName" class="control-label"></label>
-                <input asp-for="EventName" class="form-control" />
-                <span asp-validation-for="EventName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EventYear" class="control-label"></label>
-                <input asp-for="EventYear" class="form-control" />
-                <span asp-validation-for="EventYear" class="text-danger"></span>
+                <label asp-for="Year" class="control-label"></label>
+                <input asp-for="Year" class="form-control" />
+                <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
