--- a/WebCycleManager/Views/Events/Create.cshtml
+++ b/WebCycleManager/Views/Events/Create.cshtml
@@ -1,26 +1,24 @@
-﻿@model Domain.Models.Event
+﻿@model EventItemViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Maak</h1>
-
-<h4>Evenement</h4>
+<h4>Maak Evenement</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="EventName" class="control-label"></label>
-                <input asp-for="EventName" class="form-control" />
-                <span asp-validation-for="EventName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EventYear" class="control-label"></label>
-                <input asp-for="EventYear" class="form-control" />
-                <span asp-validation-for="EventYear" class="text-danger"></span>
+                <label asp-for="Year" class="control-label"></label>
+                <input asp-for="Year" class="form-control" />
+                <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
