--- a/WebCycleManager/Views/Events/Create.cshtml
+++ b/WebCycleManager/Views/Events/Create.cshtml
@@ -31,6 +31,11 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ConfigurationId" class="control-label"></label>
+                <select asp-for="ConfigurationId" class="form-control" asp-items="ViewBag.ConfigurationId"></select>
+            </div>
+
+            <div class="form-group">
                 <input type="submit" value="Maak" class="btn btn-primary" />
             </div>
         </form>
