--- a/WebCycleManager/Views/Events/Edit.cshtml
+++ b/WebCycleManager/Views/Events/Edit.cshtml
@@ -32,6 +32,10 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ConfigurationId" class="control-label"></label>
+                <select asp-for="ConfigurationId" class="form-control" asp-items="ViewBag.ConfigurationId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Opslaan" class="btn btn-primary" />
             </div>
         </form>
