--- a/WebCycleManager/Views/Events/Index.cshtml
+++ b/WebCycleManager/Views/Events/Index.cshtml
@@ -23,7 +23,7 @@
             <th>
                 @Html.DisplayName("Einddatum")
             </th>
-            <th></th>
+            <th colspan="2"></th>
         </tr>
     </thead>
     <tbody>
@@ -48,8 +48,8 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
             </td>
             <td>
-                <a asp-controller="CompetitorsInEvents" asp-route-eventId="@item.Id" asp-action="Index">Deelnemers</a>
-
+                    <a asp-controller="CompetitorsInEvents" asp-route-eventId="@item.Id" asp-action="Index">Deelnemers</a> |
+                    <a asp-controller="Points" asp-route-eventId="@item.Id" asp-action="Index">Punten</a>
             </td>
         </tr>
     }
