--- a/WebCycleManager/Views/Stages/Delete.cshtml
+++ b/WebCycleManager/Views/Stages/Delete.cshtml
@@ -1,14 +1,11 @@
-﻿@model Domain.Models.Stage
+﻿@model StageViewModel
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Verwijder</h1>
-
 <h3>Weet je zeker dat je deze etappe wilt verwijderen?</h3>
 <div>
-    <h4>Stage</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -30,15 +27,22 @@
             @Html.DisplayFor(model => model.FinishLocation)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Event)
+            @Html.DisplayNameFor(model => model.EventName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.EventName)
+            @Html.DisplayFor(model => model.EventName)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EventYear)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EventYear)
+        </dd>
+
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="StageId" />
         <input type="submit" value="Verwijder" class="btn btn-danger" /> |
         <a asp-action="Index">Terug naar de lijst</a>
     </form>
