--- a/WebCycleManager/Views/Events/Edit.cshtml
+++ b/WebCycleManager/Views/Events/Edit.cshtml
@@ -32,6 +32,11 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IsActive" class="control-label"></label>
+                <input type="checkbox" asp-for="IsActive" class="form-check" />
+                <span asp-validation-for="IsActive" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ConfigurationId" class="control-label"></label>
                 <select asp-for="ConfigurationId" class="form-control" asp-items="ViewBag.ConfigurationId"></select>
             </div>
