wip using the app

--- a/WebCycleApp/Views/EventListPage.xaml
+++ b/WebCycleApp/Views/EventListPage.xaml
@@ -2,17 +2,24 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WebCycleApp.Views.EventListPage"
+             xmlns:local="clr-namespace:WebCycleApp.ViewModels"
              Title="EventListPage">
-    <CollectionView x:Name="collectionView"
-                    Margin="20"
-                    SelectionMode="Single">
+    <CollectionView ItemsSource="{Binding CompetitorsCollection}">
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <Grid Padding="80,0,0,0"
-                      ColumnDefinitions="0.9*, 0.1*">
-                    <Label Text="{Binding EventName}"  FontSize="20" />
-                    <Button Text="{Binding EventYear}" />
-                </Grid>
+                <VerticalStackLayout BackgroundColor="DarkGoldenrod" Spacing="2">
+                    <Button 
+                        Text="{Binding CompetitorName}"  
+                        FontSize="30" 
+                        TextColor="Black"  BackgroundColor="DarkGray" >
+                    </Button>
+                    <!--<Label
+                        Text="{Binding CountryId}"
+                        FontSize="10"
+                        TextColor="Black" VerticalTextAlignment="Start"
+                        />-->
+                    <BoxView Color="Black" HeightRequest="2"></BoxView>
+                </VerticalStackLayout>
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
