fix some bugs for configuration + item; viewmodels for configuration

--- a/WebCycleManager/Views/ConfigurationItems/Create.cshtml
+++ b/WebCycleManager/Views/ConfigurationItems/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Models.ConfigurationItem
+﻿@model ConfigurationItemViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -32,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-controller="Configuration" asp-action="Index">Terug naar de lijst</a>
+    <a asp-controller="Configurations" asp-action="Index">Terug naar de lijst</a>
 </div>
 
 @section Scripts {
