--- a/WebCycleManager/Views/Configurations/Edit.cshtml
+++ b/WebCycleManager/Views/Configurations/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Models.Configuration
+﻿@model ConfigurationViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,9 +12,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="ConfigurationType" class="control-label"></label>
-                <input asp-for="ConfigurationType" class="form-control" />
-                <span asp-validation-for="ConfigurationType" class="text-danger"></span>
+                <label asp-for="ConfigurationName" class="control-label"></label>
+                <input asp-for="ConfigurationName" class="form-control" />
+                <span asp-validation-for="ConfigurationName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Opslaan" class="btn btn-primary" />
