--- a/WebCycleManager/Views/Configurations/Index.cshtml
+++ b/WebCycleManager/Views/Configurations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Models.Configuration>
+﻿@model IEnumerable<ConfigurationViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ConfigurationType)
+                @Html.DisplayName("Configuratie")
             </th>
             <th></th>
         </tr>
@@ -22,7 +22,7 @@
     @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ConfigurationType)
+                @Html.DisplayFor(modelItem => item.ConfigurationName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Wijzig</a> |
