--- a/WebCycleManager/Views/Competitors/Index.cshtml
+++ b/WebCycleManager/Views/Competitors/Index.cshtml
@@ -22,16 +22,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.First().FirstName)
+                @Html.DisplayName("Voornaam")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.First().LastName)
+                @Html.DisplayName("Achternaam")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.First().Team)
+                @Html.DisplayName("Team naam")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.First().Country)
+                @Html.DisplayName("Land")
             </th>
             <th></th>
         </tr>
