--- a/WebCycleManager/Views/Shared/_Layout.cshtml
+++ b/WebCycleManager/Views/Shared/_Layout.cshtml
@@ -40,6 +40,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Configurations" asp-action="Index">Configuraties</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GameCompetitors" asp-action="Index">Deelnemers</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
