--- a/WebCycleManager/Views/Results/Index.cshtml
+++ b/WebCycleManager/Views/Results/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ResultViewModel
-<h1>@Model.StageName</h1>
+<h1>@Model.StageName</h1>CompetitorId
  <form method="post" asp-controller="Results" asp-action="Index">
 <table class="table">
     <thead>
