--- a/WebCycleManager/Views/GameCompetitors/Create.cshtml
+++ b/WebCycleManager/Views/GameCompetitors/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Maak" class="btn btn-primary" />
             </div>
         </form>
     </div>
