--- a/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
+++ b/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Domain.Models;
-@model List<ResultLine>
+@model GameCompetitorInEventViewModel
 
 <div>
-    <h4>Deelnemer team</h4>
+    <h4>Deelnemer @Model.TeamName (@Model.Score punten)</h4>
     <hr />
     <table class="table">
         <thead>
@@ -20,23 +20,17 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.CompetitorsInEvent)
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.FirstName) &nbsp;
+                        @Html.DisplayFor(modelItem => item.FirstName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.LastName) &nbsp;
+                        @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Score)
-
-                    </td>
-                    <td>
-@*                        <a asp-action="Edit" asp-route-id="@item.Id">Wijzig</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Team</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a> |*@
                     </td>
                 </tr>
             }
@@ -44,6 +38,5 @@
     </table>
 </div>
 <div>
-    @*<a asp-action="Edit" asp-route-id="@Model?.Id">Wijzig</a> |*@
-    <a asp-action="Index">Terug naar de lijst</a>
+    <a asp-action="Index" asp-route-eventId="@Model.EventId">Terug naar de lijst</a>
 </div>
