--- a/WebCycleManager/Views/GameCompetitorEvents/Index.cshtml
+++ b/WebCycleManager/Views/GameCompetitorEvents/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Domain.Models.GameCompetitorEvent>
+﻿@model List<GameCompetitorInEventViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Deelnemers</h1>
+<h1>Stand</h1>
 
 <p>
     <a asp-action="Create">Maak nieuw</a>
@@ -13,36 +13,36 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TeamName)
+                @Html.DisplayNameFor(model => model.First().TeamName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.First().GameCompetitor.FirstName)
+                @Html.DisplayNameFor(model => model.First().GameCompetitorName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.First().GameCompetitor.LastName)
+                @Html.DisplayNameFor(model => model.First().Score)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TeamName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GameCompetitor.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GameCompetitor.LastName)
+@foreach (var item in Model.OrderByDescending(c => c.Score).ThenBy(c => c.TeamName)) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.TeamName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.GameCompetitorName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Score)
 
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Wijzig</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" asp-route-eventId="@item.EventId">Team</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a> |
-            </td>
-        </tr>
+        </td>
+        <td>
+            <a asp-action="Edit" asp-route-id="@item.Id">Wijzig</a> |
+            <a asp-action="Details" asp-route-id="@item.Id" asp-route-eventId="@item.EventId">Team</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a> |
+        </td>
+    </tr>
 }
     </tbody>
 </table>
