--- a/WebCycleManager/Views/CompetitorsInEvents/Edit.cshtml
+++ b/WebCycleManager/Views/CompetitorsInEvents/Edit.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="EventNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="OutOfCompetition" class="control-label"></label>
+                <input type="checkbox" asp-for="OutOfCompetition"  />
+                <span asp-validation-for="OutOfCompetition" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Opslaan" class="btn btn-primary" />
             </div>
         </form>
