--- a/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
+++ b/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
@@ -16,6 +16,9 @@
                 <th>
                     score
                 </th>
+                <th>
+                    uitgevallen
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -31,6 +34,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Score)
+                    </td>
+                    <td>
+                        @(item.OutOfCompetition ? "ja" : "")
                     </td>
                 </tr>
             }
