--- a/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
+++ b/WebCycleManager/Views/GameCompetitorEvents/Details.cshtml
@@ -1,5 +1,54 @@
-﻿@using Domain.Models;
+﻿@*@using Domain.Models;*@
 @model GameCompetitorInEventViewModel
+
+@* <form method="post" asp-controller="GameCompetitorEvents" asp-action="Detail">
+    <h4>Deelnemer @Model.TeamName (@Model.Score punten)</h4>
+    <hr />
+
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                nr
+            </th>
+            <th>
+                competitor
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+
+    @for(var i = 0; i < 15; i++) {
+        <tr>
+            <td>
+                <label>@(i+1)</label>
+            </td>
+            <td>
+                @if(Model.CompetitorsInEvent != null && Model.CompetitorsInEvent.Count > i)
+                {
+                            <p>hier komt een ddl</p>
+                          @*  @Html.DropDownList($"Model.CompetitorsInEvent[{i}].SelectedCompetitorId",Model.CompetitorsInEvent[i].DropdownList, "-- selecteer --", "Value")
+                }
+                else
+                {
+                            <label>@Model.CompetitorsInEvent[i].FirstName @Model.CompetitorsInEvent[i].LastName</label>
+                }
+            </td>
+            <td>
+                @if (Model.Results[i].Id > 0)
+                {
+                    <a asp-action="Delete" asp-route-id="@Model.Results[i].Id">Verwijder</a>
+                }*
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
+
+</form>
+*@
 
 <div>
     <h4>Deelnemer @Model.TeamName (@Model.Score punten)</h4>
@@ -23,24 +72,48 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.CompetitorsInEvent)
+            @if(Model.CompetitorsInEvent != null)
+            {
+                for(int i=0; i < Model.NumberOfPicks; i++)
+                {
+@*                foreach (var item in Model.CompetitorsInEvent)
+                {
+*@                    <tr>
+                        <td>
+                        @Html.DisplayFor(modelItem => Model.CompetitorsInEvent[i].FirstName)
+                    </td>
+                    <td>
+                            @Html.DisplayFor(modelItem => Model.CompetitorsInEvent[i].LastName)
+                    </td>
+                    <td>
+                            @Html.DisplayFor(modelItem => Model.CompetitorsInEvent[i].Score)
+                    </td>
+                    <td>
+                        @(Model.CompetitorsInEvent[i].OutOfCompetition ? "ja" : "")
+                    </td>
+                    </tr>
+                }
+                var toPick = 15 - Model.NumberOfPicks;
+                for(int j = 0; j < toPick; j++)
+                {
+                    <tr>
+                        <td>
+                            @Html.DropDownList($"Model.CompetitorsInEvent[{j}].SelectedCompetitorId",Model.DropdownList, "-- selecteer --", "Value")
+                        </td>
+                    </tr>
+                }
+            }
+@*            else
             {
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Score)
-                    </td>
-                    <td>
-                        @(item.OutOfCompetition ? "ja" : "")
-                    </td>
+                @for(int i=0; i < 15; i++)
+                {
+                   @Html.DropDownList($"Model.CompetitorsInEvent[{i}].SelectedCompetitorId",Model.DropdownList, "-- selecteer --", "Value")
+                    <td>@i</td>
+                }
                 </tr>
             }
-        </tbody>
+*@        </tbody>
     </table>
 </div>
 <div>
